Criação de API Rest com documentação no swagger
