# app.js
@@ -4,7 +4,7 @@ const swaggerUi = require('swagger-ui-express')
 const swaggerDocument = require('./swagger.json')
 
 var index = require('./routes/indexRouter')
-var estoqueRouter = require('./routes/pedidoRouter')
+var pedidoRouter = require('./routes/pedidoRouter')
 
 var app = express()
 
@@ -14,12 +14,12 @@ app.use('/API', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
 app.use('/', index)
 
-app.use('/pedido', estoqueRouter)
+app.use('/pedido', pedidoRouter)
 
-app.use('/criar', estoqueRouter);
+app.use('/criar', pedidoRouter);
 
-app.use('/atualizar', estoqueRouter);
+app.use('/atualizar', pedidoRouter);
 
-app.use('/deletar', estoqueRouter);
+app.use('/deletar', pedidoRouter);
 
 module.exports = app
